New Scene Collection Does Not Create A New Collection #58871

Closed
opened 2018-12-06 15:40:35 +01:00 by Steve Warner · 7 comments

System Information
Operating system: Windows 10
Graphics card: GeForce 1080

Blender Version
Broken:
2.80 Beta
2018-12-03 00:27
Hash: a205493426

Short description of error

Right clicking the Scene Collection in the Scenes view of the Outliner and choosing New Collection does not create a new collection

Open Blender
Change the Outliner to Scenes view
Click on the Scene Collection to highlight it
Right Click the Scene Collection and choose New
Nothing happens and no scene collection is created

**System Information** Operating system: Windows 10 Graphics card: GeForce 1080 **Blender Version** Broken: 2.80 Beta 2018-12-03 00:27 Hash: a205493426b **Short description of error** Right clicking the Scene Collection in the Scenes view of the Outliner and choosing New Collection does not create a new collection Open Blender Change the Outliner to Scenes view Click on the Scene Collection to highlight it Right Click the Scene Collection and choose New Nothing happens and no scene collection is created
Author

Added subscriber: @stevewarner

Added subscriber: @stevewarner

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this. Can you try a newer blender build?

I can not reproduce this. Can you try a newer blender build?

Added subscriber: @brecht

Added subscriber: @brecht

This only happens in the Scenes view, I can confirm it.

This only happens in the Scenes view, I can confirm it.

This issue was referenced by a48bd6cc74

This issue was referenced by a48bd6cc74298cbd5ed66c8ab8de33f3713950c8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58871
No description provided.