Fix T58871: New Scene Collection Does Not Create A New Collection